--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ background-color: lightblue;
 
 h1 {
 text-align: center;
-  font-size: 50px;
+  font-size: 80px;
 }
 
-
+p {
+  font-size: 30px;
+}
 
 
 
