--- a/style.css
+++ b/style.css
@@ -12,12 +12,10 @@ p {
   font-size: 30px;
 }
 
-.imgtxt {
-top-margin: 50px;
-  left-margin: 50px;
+.a {
+  text-align: center;
+  color: blue;
 }
-
-
 
 
 
